Bug 337542 - Cursor and scroll position jump back to top when modified note loses focus
Summary: Cursor and scroll position jump back to top when modified note loses focus
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.13.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-17 13:06 UTC by Travis Evans
Modified: 2014-07-18 06:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Travis Evans 2014-07-17 13:06:52 UTC
When a note loses focus, the scroll position and text cursor jump back to the top of the note after the note was modified or resized since the last focus, but apparently not if the note was left unmodified.

Steps to reproduce:
1. Create a new note and enter several lines of text (best done with a note long enough for a scrollbar, where the effect is most obvious)
2. Leave cursor and scroll at a position other than the very top and switch to another window, then switch back.

Result:  Cursor/scroll jump to top
Expected:  Cursor/scroll remain unchanged
Comment 1 Laurent Montel 2014-07-17 18:23:52 UTC
Git commit 5339bdddccfb2b167b6b20b02159868ef4ee845c by Montel Laurent.
Committed on 17/07/2014 at 18:23.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 337542 - Cursor and scroll position jump back to top when modified note loses focus

FIXED-IN: 4.14

M  +28   -16   knotes/notes/knote.cpp
M  +2    -0    knotes/notes/knote.h

http://commits.kde.org/kdepim/5339bdddccfb2b167b6b20b02159868ef4ee845c
Comment 2 Laurent Montel 2014-07-18 06:28:17 UTC
I fixed kontact plugin notes too.