Fix Bug 337542 - Cursor and scroll position jump back to top when modified note loses focus

FIXED-IN: 4.14
BUG: 337542